# miniPluginsSystem

./: CMakeLists.txt  README.md
include/: plugin.h  plugin_loader.h
plugin_core/: CMakeLists.txt
plugin_core/src/1/: plugin1.cpp  plugin1.h
plugin_core/src/2/: plugin2.cpp  plugin2.h
src/: plugin.cpp  plugin_loader.cpp
test/: main.cpp
